--- a/3kh0-assets-main-backrooms/3kh0-assets-main-backrooms/backrooms/index.html
+++ b/3kh0-assets-main-backrooms/3kh0-assets-main-backrooms/backrooms/index.html
@@ -22,5 +22,12 @@
         <div class="title">Backrooms</div>
       </div>
     </div>
+            <script>
+document.addEventListener('keydown', function(event) {
+    if (event.key.toLowerCase() === 'b') {
+        window.location.href = 'https://fatty.neocities.org/other';
+    }
+});
+</script>
   </body>
 </html>
